--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+commit efd15b9e707dc988265aa11ed14a82708cda71fa
+Author: Philip Knirsch <pknirsch@hamburg.stuttgart.redhat.com>
+Date:   Wed Feb 25 15:08:41 2009 +0100
+
+    - Fixed summary
+    - Added missing GPL notic to tuned.py
+
 commit c6e97c54cf38923f8c5cd515d53dc92af3c310b4
 Author: Philip Knirsch <pknirsch@hamburg.stuttgart.redhat.com>
 Date:   Wed Feb 25 12:30:07 2009 +0100
