--- a/README
+++ b/README
@@ -1,5 +1,23 @@
-NAME
-       tuned - dynamic adaptive system tuning daemon
+tuned: A simple daemon that performs monitoring and adaptive configuration
+       of devices in the system
+
+Copyright (C) 2008, 2009 Red Hat, Inc.
+Authors: Phil Knirsch
+
+This program is free software; you can redistribute it and/or
+modify it under the terms of the GNU General Public License
+as published by the Free Software Foundation; either version 2
+of the License, or (at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program; if not, write to the Free Software
+Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
+
 
 SYNOPSIS
        tuned [options]
@@ -19,6 +37,3 @@ BUGS
 
 AUTHOR
        Written by Phil Knirsch <pknirsch@redhat.com>.
-
-REPORTING BUGS
-       Report bugs to <pknirsch@redhat.com>.
