- Fixed BuildRoot tag to use latest recommendation of FPG

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+commit 85afc406d455c1dce5452519ee0d3795c62b8698
+Author: Philip Knirsch <pknirsch@hamburg.stuttgart.redhat.com>
+Date:   Wed Feb 25 19:25:10 2009 +0100
+
+    - Updated changelog
+
 commit 62debaff1a107a2a8229f4a8a804762cec142071
 Author: Philip Knirsch <pknirsch@hamburg.stuttgart.redhat.com>
 Date:   Wed Feb 25 19:22:54 2009 +0100
