--- a/man/tuned-adm.1
+++ b/man/tuned-adm.1
@@ -20,26 +20,36 @@
 .\" 
 .TH TUNED_ADM "1" "9 Jul 2009" "Linux Programmer's Manual"
 .SH NAME
-tuned_adm \- commandline tool for setting the power-save options
+tuned-adm \- commandline tool for setting the power-save options
 .SH SYNOPSIS
-.B tuned_adm 
+.B tuned-adm 
 .B 
-.BR help ", " laptop ", " server
+.BR help ", " laptop ", " server ", " default ", " off "
 .br
 .SH DESCRIPTION
 This command line utility allows user to set profile for server or laptop.
 .SH "OPTIONS"
+
+.SS
 .TP
 .B help
 Print out the list of commands.
+
 .TP
 .B laptop
+
 .TP
 .B server
-.TP
 These settings are calling ktune which set up different values for better resource consumption.
+It also switch on tuned daemon and add ktune and tuned into chkconfig. Usbsuspend is set.
+
+.TP
+.B off
+Switch off all ktune and tuned settings and remove them from services. The configuration file are 
+set to previous settings.
 
 .SH "SEE ALSO"
+.BR tuned (8)
 .SH AUTHOR
 .nf
 Marcela Mašláňová <mmaslano@redhat.com>
