Verbose mode for main part of for separate plugins.

--- a/doc/tuned.conf.5
+++ b/doc/tuned.conf.5
@@ -18,6 +18,11 @@ options:
 .IP \fBinterval\fR
 Interval for monitoring and tuning in seconds. The default is 10.
 
+.IP \fBverbose\fR
+Default mode is False. It is possible to define 
+.I verbose=True 
+in main section or for separate sections.
+
 .SH "[plugin] OPTIONS"
 .LP
 Each plugin can have an individual section with the name of the plugin as
